--- a/.github/workflows/cat.yml
+++ b/.github/workflows/cat.yml
@@ -32,4 +32,4 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          copy-Item -Path /../../cat.png -Destination C:/Users/TA-19E-115/Desktop/www
+          Copy-Item -Path /../../cat.png -Destination C:/Users/TA-19E-115/Desktop/www
