--- a/.github/workflows/cat.yml
+++ b/.github/workflows/cat.yml
@@ -30,6 +30,8 @@ jobs:
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          Copy-Item -Path //../../../cat.png -Destination C:/Users/TA-19E-115/Desktop/www
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v3
+        with:
+          name: cat.png
+          path: C:/Users/TA-19E-115/Desktop/www
