--- a/.github/workflows/cat.yml
+++ b/.github/workflows/cat.yml
@@ -25,12 +25,8 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
       # Runs a set of commands using the runners shell
       - name: 'Upload Artifact'
         run: |
-          ls -lah
+          dir
           cp cat.png C:/Users/TA-19E-115/www/cat.png
