--- a/.github/workflows/cat.yml
+++ b/.github/workflows/cat.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
-      - name: 'Upload Artifact'
+      - name: 'download file'
         run: |
           dir
           cp cat.png C:/Users/TA-19E-115/Desktop/www/cat.png
