--- a/.github/workflows/cat.yml
+++ b/.github/workflows/cat.yml
@@ -29,4 +29,4 @@ jobs:
       - name: 'download file'
         run: |
           dir
-          cp cat.png C:/Users/TA-19E-115/Desktop/www/cat.png
+          cp *.png C:\Users\TA-19E-115\Desktop\www
