--- a/.github/workflows/cat.yml
+++ b/.github/workflows/cat.yml
@@ -19,6 +19,7 @@ jobs:
   cat:
     # The type of runner that the job will run on
     runs-on: self-hosted
+    environment: arturi arvuti
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
